fixed wrong background color on light mode

--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -530,7 +530,7 @@ html:not([data-scroll='0']) .toc {
 }
 
 .paginav {
-    background: var(--code-bg);
+    background: var(--theme);
     border: 1px solid var(--border);
 }
 
