--- a/assets/css/core/theme-vars.css
+++ b/assets/css/core/theme-vars.css
@@ -58,7 +58,7 @@
 }
 
 .list {
-    background: var(--code-bg);
+    background: var(--theme);
 }
 
 .dark.list {
